# pay

./: .gitignore  BENCHMARK_RESULTS.md  Cargo.toml  README.md  ai-usage.md
auto_tester/: README.md  run_tests.sh
auto_tester/expected/: 02_dispute_resolve.csv  03_dispute_chargeback.csv  04_insufficient_funds.csv  05_multiple_clients.csv  06_decimal_precision.csv  08_invalid_transactions.csv  09_whitespace.csv  10_dispute_partial_withdrawal.csv  11_empty.csv  12_client_mismatch.csv  13_multiple_disputes.csv  14_large_amounts.csv
auto_tester/scenarios/: 04_insufficient_funds.csv  05_multiple_clients.csv  06_decimal_precision.csv  07_locked_account.csv  08_invalid_transactions.csv  09_whitespace.csv  10_dispute_partial_withdrawal.csv  12_client_mismatch.csv  13_multiple_disputes.csv  14_large_amounts.csv
benches/: README.md
benches/notes/: BENCHMARK_RESULTS.md  RUNTIME_ANALYSIS.md
benches/src/: concurrent_streams.rs  end_to_end.rs  generate_fixtures.rs  runtime_comparison.rs  storage_operations.rs  stream_topologies.rs  transaction_processing.rs
benches/src/common/: mod.rs
examples/: concurrent_topology.rs  sequential_topology.rs
hotpath/: README.md
hotpath/notes/: PROFILING_ANALYSIS.md  SETUP.md
hotpath/src/: high_contention.rs  multi_threaded.rs  single_threaded.rs  sparse_accounts.rs  store_intensive.rs  workflow_stress.rs
src/: lib.rs  main.rs  prelude.rs
src/app/: cli.rs  error.rs  mod.rs
src/domain/: account.rs  amount.rs  error.rs  mod.rs  operations.rs  transaction.rs
src/engine/: error.rs  mod.rs  processor.rs
src/io/: csv_reader.rs  csv_writer.rs  error.rs  mod.rs  parse.rs
src/storage/: concurrent.rs  concurrent_transaction_store.rs  error.rs  mod.rs  traits.rs
src/streaming/: error.rs  mod.rs  processor.rs  single.rs
tests/: integration_test.rs
tests/fixtures/: disputes.csv  errors.csv
