[package]
name = "pay"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
thiserror = "1.0"
dashmap = "6.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
csv-async = "1.3"
pin-project-lite = "0.2"
hotpath = { version = "0.5", optional = true }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
rayon = "1.10"

[features]
default = []
profiling = ["hotpath"]

[[bench]]
name = "transaction_processing"
path = "benches/src/transaction_processing.rs"
harness = false

[[bench]]
name = "storage_operations"
path = "benches/src/storage_operations.rs"
harness = false

[[bench]]
name = "concurrent_streams"
path = "benches/src/concurrent_streams.rs"
harness = false

[[bench]]
name = "end_to_end"
path = "benches/src/end_to_end.rs"
harness = false

[[bench]]
name = "runtime_comparison"
path = "benches/src/runtime_comparison.rs"
harness = false

# Hotpath profiling binaries
[[bin]]
name = "hotpath_single_threaded"
path = "hotpath/src/single_threaded.rs"
required-features = ["profiling"]

[[bin]]
name = "hotpath_multi_threaded"
path = "hotpath/src/multi_threaded.rs"
required-features = ["profiling"]

[[bin]]
name = "hotpath_high_contention"
path = "hotpath/src/high_contention.rs"
required-features = ["profiling"]

[[bin]]
name = "hotpath_workflow_stress"
path = "hotpath/src/workflow_stress.rs"
required-features = ["profiling"]

[[bin]]
name = "hotpath_store_intensive"
path = "hotpath/src/store_intensive.rs"
required-features = ["profiling"]

[[bin]]
name = "hotpath_sparse_accounts"
path = "hotpath/src/sparse_accounts.rs"
required-features = ["profiling"]
